# signal

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
docs/: Doxyfile
include/signal/: common.hpp  emitter.hpp  receiver.hpp  signal.hpp
include/signal/detail/: common.hpp  control.hpp  data.hpp  emitter.hpp  receiver.hpp
try/: CMakeLists.txt  main.cpp
